# jungfrau

./: .gitignore  .gitmodules  LICENSE  README.md
000-project-network/recv/: recv.c
001-project-compression-decompression/: CMakeLists.txt  compressor_test.cc
002-project-recreate-dectris-compression/: CMakeLists.txt  recompressor_test.cc
003-project-general-compression/: CMakeLists.txt  recompressor_test.cc
004-issue-19-pixel-masker/: big_pixel_masker.py
005-simulator-config/: 1m-simulator-1-1.conf  1m-simulator-1-2.conf  1m-simulator-2-1.conf  1m-simulator-2-2.conf  1m-simulator-4-1.conf  1m-simulator.conf  2m-simulator-1-2.conf  2m-simulator-1.conf  4.5m-simulator.conf  5m-simulator-a.conf  5m-simulator.conf  9m-simulator.conf  localhost-simulator.conf
006-simulator-data-generator/: data_generator.py  pixel_generator.py
007-zeromq/: README.md  source.py  stream_capture.py
008-timer/: timer.c
009-reader/: block.c  reader.c
010-raw/: raw.py
100-correction-files/: extract_gain_map.py  extract_pedestal_map.py
101-data-capture/: CMakeLists.txt  README.md  zeromq_jungfrau_correct.cc
102-zeromq-writer/: zmq_sink.py
doc/: BIG_PIXELS.md  DATA_CAPTURE.md  FORMAT.md  NETWORK_CONFIGURATION.md  PIXEL_SIMULATION.md  README.md  SIMULATOR.md  module.drawio  pixels.drawio
network/send/: send.c
